<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tvmenis"
        android:layout_width="66dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/menis"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text13"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/_13"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvmenis" />

    <Button
        android:id="@+id/restart"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:text="@string/restart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/tvmenis"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgflag"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:scaleType="center"
        android:src="@drawable/flag"
        app:layout_constraintStart_toEndOf="@+id/restart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/imgflag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/_10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtime" />

    <ScrollView
        android:layout_width="278dp"
        android:layout_height="383dp"
        android:layout_marginTop="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restart"
        app:layout_constraintVertical_bias="0.013">

        <LinearLayout
            android:id="@+id/llBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>